fixed section image-text alignment in landscape

--- a/styles/main_sections.scss
+++ b/styles/main_sections.scss
@@ -82,17 +82,19 @@ $shadow_container-paddingtopbottom: 2em;
     }
 }
 
+$section-text_container_margintopbottom: 0.5em;
 .text_container { 
     display: flex;
     flex-direction: column;
     justify-content: space-evenly;
-    align-items: baseline;
+    align-items: center;
 
     // background-color: green;
 
     padding: none;
     // margin-right: 1vw;
     // margin-top: $shadow_container-paddingtopbottom;
+    margin-top: -$shadow_container-paddingtopbottom / 2/3;
 
     width: min(85%);
     height: 80%;
@@ -121,14 +123,13 @@ $shadow_container-paddingtopbottom: 2em;
     p {
         font-family: Helvetica, Arial, sans-serif;
 
-        $section-text_container_margintopbottom: 0.5em;
         margin-top: $section-text_container_margintopbottom;
         margin-bottom: $section-text_container_margintopbottom;
     }
 }
 @media screen and (min-width: $min_screenwidth_for_section_wrap) {
     .text_container {
-        margin-top: -$shadow_container-paddingtopbottom;
+        align-items: baseline;
         max-width: 800px;
 
         padding-left: clamp(1em, 3vw, 5em);
@@ -136,6 +137,8 @@ $shadow_container-paddingtopbottom: 2em;
 
         h2 {
             text-align: inherit;
+
+            margin-top: $section-text_container_margintopbottom;
         }
     }
 }
